--- a/src/app/modules/event/components/event-list-item/event-list-item.component.scss
+++ b/src/app/modules/event/components/event-list-item/event-list-item.component.scss
@@ -14,5 +14,9 @@
       border-color: $light-gray;
       background-color: $lighter-gray;
     }
+
+    .delete-button {
+      margin-bottom: 8px;
+    }
   }
 }
