Remove app button

--- a/src/app/core/components/page-not-found/page-not-found.component.html
+++ b/src/app/core/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,8 @@
 <span class="text-primary">404</span>
-<h1 class="text-dark">page not found</h1>
-<app-button label="label_home" buttonStyle="primary" [routerLink]="[ '/' ]"></app-button>
+<h1 class="text-dark">Page not found</h1>
+<a
+  class="btn btn-primary col-mx-auto"
+  [routerLink]="[ '/' ]"
+>
+  Home
+</a>
