--- a/src/app/modules/event/components/event-list/event-list.component.scss
+++ b/src/app/modules/event/components/event-list/event-list.component.scss
@@ -1,3 +1,13 @@
 :host {
   display: block;
+
+  .loader {
+    position: fixed;
+    top: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
 }
