--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'components/buttons';
 @import 'components/media';
 @import 'components/forms';
+@import 'components/modals';
 
 *,
 *::after,
