--- a/src/app/modules/event/components/event-list/event-list.component.html
+++ b/src/app/modules/event/components/event-list/event-list.component.html
@@ -28,3 +28,7 @@
   class="loading loading-lg loader"
   *ngIf="isLoading"
 ></div>
+
+<div style="visibility: none">
+  {{ runChangeDetection }}
+</div>
