--- a/src/app/modules/event/components/event-list/event-list.component.html
+++ b/src/app/modules/event/components/event-list/event-list.component.html
@@ -29,6 +29,6 @@
   *ngIf="isLoading"
 ></div>
 
-<div style="visibility: none">
+<div style="visibility: hidden">
   {{ runChangeDetection }}
 </div>
