--- a/src/app/modules/event/components/event-list-item/event-list-item.component.html
+++ b/src/app/modules/event/components/event-list-item/event-list-item.component.html
@@ -113,6 +113,4 @@
   </div>
 </div>
 
-<div style="visibility: hidden">
-  {{ runChangeDetection }}
-</div>
+<div style="visibility: hidden">{{ runChangeDetection }}</div>
