--- a/src/app/modules/event/components/event-list/event-list.component.html
+++ b/src/app/modules/event/components/event-list/event-list.component.html
@@ -29,6 +29,4 @@
   *ngIf="isLoading"
 ></div>
 
-<div style="visibility: hidden">
-  {{ runChangeDetection }}
-</div>
+<div style="visibility: hidden">{{ runChangeDetection }}</div>
