--- a/src/app/modules/event/components/event-pricing/event-pricing.component.html
+++ b/src/app/modules/event/components/event-pricing/event-pricing.component.html
@@ -105,7 +105,4 @@
   </div>
 </div>
 
-<div style="visibility: hidden">
-  {{ runChangeDetection }}
-</div>
-
+<div style="visibility: hidden">{{ runChangeDetection }}</div>
