--- a/src/app/modules/event/components/event-place/event-place.component.html
+++ b/src/app/modules/event/components/event-place/event-place.component.html
@@ -104,6 +104,4 @@
   </div>
 </div>
 
-<div style="visibility: hidden">
-  {{ runChangeDetection }}
-</div>
+<div style="visibility: hidden">{{ runChangeDetection }}</div>
